bitfield/tests/09-variant-out-of-range.stderr
error[E0080]: evaluation panicked: bitfield size too large
 --> tests/09-variant-out-of-range.rs:8:10
  |
8 | #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^ evaluation of `_` failed here
